--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
-  "name": "my-app",
+  "name": "react-password-generator",
+  "description": "Password Generator / Evaluator Starter Template",
   "version": "0.1.0",
+  "author": "Coverse",
+  "contributors": [
+    "Chadi <coverse@gmail.com>"
+  ],
+  "homepage": "https://coverse.tech/",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,18 +15,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.3.2",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
     "next": "13.4.7",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-toastify": "^9.1.3",
-    "typescript": "5.1.5",
     "usehooks-ts": "^2.9.1"
+  },
+  "devDependencies": {
+    "@types/node": "20.3.2",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "eslint": "8.43.0",
+    "eslint-config-next": "13.4.7",
+    "sass": "^1.63.6",
+    "typescript": "5.1.5"
   }
 }
